2020-03-23  Michael Catanzaro  <mcatanzaro@gnome.org>

        [GTK] Allow distributors to brand user agent
        https://bugs.webkit.org/show_bug.cgi?id=162611

        Reviewed by Adrian Perez de Castro.

        Add build option for inserting distributor branding into the user agent string.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:

2020-03-23  Philippe Normand  <pnormand@igalia.com>

        [GTK][WPE] Disable systemd logging by default

        Rubber-stamped by Žan Doberšek.

        The logAlways logs are filling the journal way too fast currently,
        specially on EWS running tests and buildbots. For the time being
        disable logging until we figure out a better way to handle this.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:

2020-03-21  Michael Catanzaro  <mcatanzaro@gnome.org>

        [GTK] Use ${PYTHON_EXECUTABLE} to run generate-gtkdoc
        https://bugs.webkit.org/show_bug.cgi?id=208970

        Reviewed by Konstantin Tokarev.

        There's no need to rely on shebangs when executing python scripts from CMake. This should
        ensure the script always works even if the shebang does not.

        * Source/cmake/GtkDoc.cmake:

2020-03-20  Justin Michaud  <justin@justinmichaud.com>

        Fix JSCOnly build without unified sources
        https://bugs.webkit.org/show_bug.cgi?id=209343

        Reviewed by Keith Miller.

        * .gitignore:

2020-03-17  Philippe Normand  <pnormand@igalia.com>

        RELEASE_LOG should not be Cocoa specific
        https://bugs.webkit.org/show_bug.cgi?id=195182

        Reviewed by Konstantin Tokarev.

        Add a Systemd Journald Logger implementation, enabled by default
        in the GTK and WPE ports. When this is enabled, release logs will
        be sent to the Systemd Journal. To retrieve media logs for
        instance, this command can be used:
