@@ -217,6 +217,16 @@ macro(WEBKIT_EXECUTABLE _target)
     if (${_target}_OUTPUT_NAME)
         set_target_properties(${_target} PROPERTIES OUTPUT_NAME ${${_target}_OUTPUT_NAME})
     endif ()
+    if (WIN32)
+        if (WTF_CPU_X86)
+            set(_processor_architecture "x86")
+        elseif (WTF_CPU_X86_64)
+            set(_processor_architecture "amd64")
+        else ()
+            set(_processor_architecture "*")
+        endif ()
+        target_link_options(${_target} PRIVATE "-manifestdependency:type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='${_processor_architecture}'")
+    endif ()
 endmacro()
 
 macro(WEBKIT_WRAP_EXECUTABLE _target)
