@@ -1,3 +1,13 @@
+2020-03-25  Fujii Hironori  <Hironori.Fujii@sony.com>
+
+        [Win] lld-link: error: /manifestdependency: is not allowed in .drectve
+        https://bugs.webkit.org/show_bug.cgi?id=204831
+
+        Reviewed by Ross Kirsling.
+
+        * TestWebKitAPI/win/main.cpp:
+        * win/DLLLauncher/DLLLauncherMain.cpp:
+
 2020-03-25  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         Invalid numeric and named references should be early syntax errors
