@@ -1,3 +1,15 @@
+2020-03-25  Fujii Hironori  <Hironori.Fujii@sony.com>
+
+        [Win] lld-link: error: /manifestdependency: is not allowed in .drectve
+        https://bugs.webkit.org/show_bug.cgi?id=204831
+
+        Reviewed by Ross Kirsling.
+
+        clang-cl doesn't support #pragma comment(linker, "/manifestdependency ..").
+        Use an linker option instead.
+
+        * Source/cmake/WebKitMacros.cmake (WEBKIT_EXECUTABLE): Added -manifestdependency linkder option if WIN32.
+
 2020-03-23  Michael Catanzaro  <mcatanzaro@gnome.org>
 
         [GTK] Allow distributors to brand user agent
